Bug 1119355 - Add a dummy touch listener on nsRangeFrame so the APZ code knows it handles them. r=roc